<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    tools:context=".Activities.CartActivity">

    <LinearLayout android:id="@+id/buy_view"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp"
                  android:layout_weight="1"
                  android:visibility="gone">

        <android.support.v7.widget.RecyclerView android:id="@+id/cart_list"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                tools:listitem="@layout/shop_row"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/loading_layout"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:animateLayoutChanges="true"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:visibility="visible">

        <TextView android:id="@+id/loading_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="16dp"
                  android:text="@string/loading_cart"
                  android:textColor="#000000"
                  android:textSize="30sp"
                  android:textStyle="bold"/>

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/nothing_view"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1"
                  android:animateLayoutChanges="true"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:visibility="gone">

        <TextView android:id="@+id/nothing_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_margin="18dp"
                  android:animateLayoutChanges="true"
                  android:text="PIZZA DOGE - The developer messed up"
                  android:textColor="#000000"
                  android:textSize="36sp"
                  android:textStyle="bold"/>

    </LinearLayout>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:animateLayoutChanges="true"
                      android:gravity="center_horizontal"
                      android:orientation="horizontal">

            <TextView android:id="@+id/subtotal_text"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="16dp"
                      android:layout_weight="1"
                      android:text="@string/subtotal_pending"
                      android:textSize="16sp"/>

            <Button android:id="@+id/buy_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_finance"
                    android:enabled="false"
                    android:text="@string/buy_now"
                    android:textColor="@color/moneyGreen"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>